--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,5 +9,23 @@
 html, body {
     height: 100vh;
     width: 100vw;
-    color: black;
+    background-color: black;
+}
+
+main {
+    height: 100vh;
+    position: relative;
+    background-color: green;
+}
+
+section#telefone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 500px;
+    width: 500px;
+    background-color: blue;
+    background: url();
+    
 }
